# bumperbot_ws

install/: local_setup.sh  setup.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_publisher
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh
install/bumperbot_description/share/bumperbot_description/: package.sh
log/: latest_build  latest_list
src/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
src/bumperbot_cpp_examples/include/bumperbot_cpp_examples/: simple_publisher.hpp  simple_turtlesim_kinematics.hpp
src/bumperbot_cpp_examples/src/: main.cpp  simple_publisher.cpp  simple_turtlesim_kinematics.cpp
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/urdf/: bumperbot.urdf.xacro
