cmake_minimum_required(VERSION 3.8)
project(bumperbot_cpp_examples)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(turtlesim REQUIRED)

include_directories(include)

# Add the executable that includes both source files
add_executable(simple_publisher
  src/simple_publisher.cpp
  src/main.cpp
)
ament_target_dependencies(simple_publisher rclcpp std_msgs)

add_executable(simple_turtlesim_kinematics
  src/simple_turtlesim_kinematics.cpp
)
ament_target_dependencies(simple_turtlesim_kinematics rclcpp turtlesim)

install(
  DIRECTORY include
  DESTINATION include
)

install(TARGETS
  simple_publisher
  simple_turtlesim_kinematics
  DESTINATION lib/${PROJECT_NAME}
)
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
